--- a/.github/workflows/rsync-deploy.yml
+++ b/.github/workflows/rsync-deploy.yml
@@ -10,11 +10,8 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Download build artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: src
-          path: src/
+      - name: Checkout code
+        uses: actions/checkout@v6
 
       - name: Setup SSH key
         uses: webfactory/ssh-agent@v0.9.1
@@ -37,4 +34,4 @@ jobs:
           SFTP_USERNAME: ${{ secrets.SFTP_USERNAME }}
           SFTP_TARGET_DIR: ${{ secrets.SFTP_TARGET_DIR }}
         run: |
-          rsync -avz --delete -e "ssh" src/ $SFTP_USERNAME@$SFTP_SERVER:$SFTP_TARGET_DIR
+          rsync -avz --delete -e "ssh" build/ $SFTP_USERNAME@$SFTP_SERVER:$SFTP_TARGET_DIR
