--- a/.github/workflows/rsync-deploy.yml
+++ b/.github/workflows/rsync-deploy.yml
@@ -23,15 +23,10 @@ jobs:
           SFTP_SERVER: ${{ secrets.SFTP_SERVER }}
         run: ssh-keyscan $SFTP_SERVER >> ~/.ssh/known_hosts
 
-      - name: Install rsync
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y rsync
-
       - name: Rsync deploy
         env:
           SFTP_SERVER: ${{ secrets.SFTP_SERVER }}
           SFTP_USERNAME: ${{ secrets.SFTP_USERNAME }}
           SFTP_TARGET_DIR: ${{ secrets.SFTP_TARGET_DIR }}
         run: |
-          rsync -avz --delete -e "ssh" build/ $SFTP_USERNAME@$SFTP_SERVER:$SFTP_TARGET_DIR
+          rsync -avz --delete -e "ssh" src/ $SFTP_USERNAME@$SFTP_SERVER:$SFTP_TARGET_DIR
